--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-env_logger = "0.9.0"
-humantime = "2.1.0"
+env_logger = "0.10.0"
 log = "0.4.17"
+gag = "1.0.0"
+humantime = "2.1.0"
 
-[dev-dependencies]
-os_pipe = "1.0.1"
-stdio-override = "0.1.3"
-tempfile = "3.3.0"
-
-[patch.crates-io]
-stdio-override = { git = "https://github.com/elichai/stdio-override" }
